<resources>
    <string name="app_name">iReflexions</string>
    <string name="your_web_client_id">488875091554-h7dml4drejh45fkjfsgdfghmuehhke9a.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">iREFLEXIONS</string>
    <string name="nav_header_subtitle">Thought Technology</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">HOME</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_breath_pacer">BREATH PACER</string>
    <string name="menu_find_resources">FIND RESOURCES</string>
    <string name="menu_privacy">PRIVACY</string>
    <string name="menu_account">ACCOUNT</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="menu_exit">Exit</string>
    <string name="courses">COURSES</string>
    <string name="how_am_i_today">HOW AM I TODAY?</string>
    <string name="community">COMMUNITY</string>
    <string name="exercises">EXERCISES</string>
    <string name="resource_libray">RESOURCE LIBRARY</string>
    <string name="biometrics">BIOMETRICS</string>
    <string name="care_center">CARE CENTER</string>
    <string name="current_program">CURRENT PROGRAM</string>
    <string name="current_course">CURRENT COURSE</string>
    <string name="browse_programs">BROWSE PROGRAMS</string>
    <string name="menu_sensor">Sensor</string>
    <string name="menu_connect_sensor">Connect Sensor</string>
    <string name="connect">Connect</string>
    <string name="no_thanks">No Thanks</string>
    <string name="begin">Begin</string>
    <string name="baseline_reading">Baseline Reading</string>
    <string name="baseline_reading_info">Please find a comfortable position and sit without movement while we gather a baseline
    reading of your body\'s current state. Press begin when you are ready.</string>
    <string name="connect_biofeedback">Connect Biofeedback Device?</string>
    <string name="connect_biofeedback_desc">This exercise has a biofeedback component and will require a sensor to work.
        Would you like to connect and use one now?</string>
    <string name="connect_biofeedback_optional_desc">This exercise has a biofeedback component (optional).
        Would you like to connect and use one now?</string>
    <string name="title_select_tps_dialog">Select a TPS</string>
    <string name="title_bluetooth_off">Bluetooth off</string>
    <string name="question_bluetooth_turn_on">Do you want to turn Bluetooth on?</string>
    <string name="msg_tps_is_connected_with_param">TPS device %1$s is connected.</string>
    <string name="msg_pair_tps_in_bluetooth_settings">Please pair TPS in your Bluetooth settings.</string>
    <string name="msg_connection_tps_failed">Connection to %1$s failed.</string>
    <string name="title_tps_disconnected">TPS disconnected</string>
    <string name="end_question_tps_reconnection">is disconnected. Connect it?</string>
    <string name="msg_tps_disconnected">TPS device is disconnected</string>
    <string name="title_account_information">Account Information</string>
    <string name="question_disconnect_tps">Disconnect TPS device?</string>
    <string name="text_please_select">Please Select</string>
    <string name="title_disconnect_tps">Disconnect TPS</string>
    <string name="error_tps_contact_off">TPS contact is off, cannot proceed further.</string>
    <string name="tps_lost_contact_return_home">stops. TPS contact is lost. Returning to Home.</string>
    <string name="exercise_stops_tps_lost_contact_return_home">Exercise stops. Sensor contact is lost. Returning to Home.</string>
    <string name="battery_state">Battery state</string>
    <string name="hand_contact_state">Hand contact state</string>
    <string name="email_address">E-mail address</string>
    <string name="email">Email</string>
    <string name="new_email">Enter new email</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="stay_logged_in">STAY LOGGED IN</string>
    <string name="forgot_detail">FORGOT DETAILS?</string>
    <string name="explore_ireflextions_without_account">EXPLORE WITHOUT AN ACCOUNT</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="or">OR</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="user_name">User Name</string>
    <string name="username">Username</string>
    <string name="new_username">Enter new username</string>
    <string name="sign_up_with">SIGN UP WITH:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gender">Gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="i_have_read_and_agree_to_the_terms_of_service">I\'ve read and agree to the <a href="https://s3.amazonaws.com/dev.legaldocs/iReflexions_TOS.html">Terms and Conditions</a></string>
    <string name="agree_to_privacy_policy">Agree to  <a href="https://s3.amazonaws.com/dev.legaldocs/LifespanDH_PrivacyPolicy.html">Privacy Policy</a></string>
    <string name="enter_email_address">Please, enter your email address</string>
    <string name="invalid_email_error">This is not a valid email address</string>
    <string name="email_empty_error">Email cannot be empty</string>
    <string name="username_email_exists_error">User with this email exists</string>
    <string name="username_email_is_not_exists_error">User with this email is not exists</string>
    <string name="username_exists_error">User with this username exists</string>
    <string name="user_already_exists">User already exists</string>
    <string name="accept_tc_error">You should accept Terms &amp; Conditions</string>
    <string name="accept_share_data_error">You should agree to privacy policy</string>
    <string name="gender_error">Please, select gender</string>
    <string name="password_confirm_match_error">Your passwords do not match. Please try again.</string>
    <string name="password_empty_error">Please enter your password</string>
    <string name="password_invalid">There was an error with your password. It must contain: \n-A lowercase letter. \n-An uppercase letter. \n-A special character. \n-A number. \n-At least 10 characters.</string>
    <string name="userName_error">User name cannot be empty</string>
    <string name="error_user_name">Please enter your username</string>
    <string name="user_password_error">Username or Password do not match. Please try again!</string>
    <string name="birthdate_empty_error">Please enter a valid birthdate</string>
    <string name="action_exit">Exit</string>
    <string name="action_logout">Logout</string>
    <string name="text_logout">Are you sure you want to logout?</string>
    <string name="text_exit">Are you sure you want to exit?</string>
    <string name="text_delete_account">Are you sure you want to delete account?</string>
    <string name="what_is_ireflexions">What is iReflexions?</string>
    <string name="next">NEXT</string>
    <string name="action_enroll_program">Enroll program</string>
    <string name="text_confirm_enrolment_from_uncompleted">You can be enrolled into one program at a time. If you want to enroll in %s, you will be unenrolled from the current %s program.</string>
    <string name="text_confirm_enrolment_from_completed">Would you like to enroll in a program %s?</string>
    <string name="sign_up_with_facebook">Sign Up with Facebook</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="sign_in_with_provider_failed">Sign in with %s failed.</string>
    <string name="google_sign_in_unavailable">"Google sign in is unavailable."</string>
    <string name="facebook_sign_in_unavailable">"Facebook sign in is unavailable."</string>
    <string name="user_signed_out_from_google">"User is Signed out from Google."</string>
    <string name="user_signed_out_from_facebook">"User is Signed out from Facebook."</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="how_are_you_today">HOW ARE YOU TODAY?</string>
    <string-array name="gender_array">
        <item>Gender</item>
        <item>Female</item>
        <item>Male</item>
        <item>Nonbinary</item>
        <item>Other</item>
        <item>Rather Not Say</item>
    </string-array>
    <string name="time">Time</string>
    <string name="title_activity_video_view">VideoViewActivity</string>
    <string name="skip">SKIP</string>
    <string name="close_app">Close app</string>
    <string name="let_s_personalize_your_experience">Let\'s personalize your experience.</string>
    <string name="strongly_disagree">Strongly\nDisagree</string>
    <string name="strongly_agree">Strongly\nAgree</string>
    <string name="na">N/A</string>
    <string name="done">Done</string>
    <string name="suggested_programs_for_you">Suggested programs for you.</string>
    <string name="enroll">+ ENROLL</string>
    <string name="browse">+ BROWSE</string>
    <string name="unenroll">- UNENROLL</string>
    <string name="temp_units">Temp Units</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="report_issue">Report Issue</string>
    <string name="delete_account">Delete Account</string>
    <string name="temperature_celsius">⁰C</string>
    <string name="temperature_fahrenheit">⁰F</string>
    <string name="inhalation_time">Inhalation Time</string>
    <string name="hold_in">Hold In</string>
    <string name="exhalation_time">Exhalation Time</string>
    <string name="hold_out">Hold Out</string>
    <string name="view_terms_of_service">View Terms of Service</string>
    <string name="share_anonymous_data_with_ireflexions_team">Share anonymous data with iReflexions team</string>
    <string name="dont_share">Don\'t Share</string>
    <string name="share">Share</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="membership">Membership</string>
    <string name="edit">Edit</string>
    <string name="change">Change</string>
    <string name="send">Send</string>
    <string name="heart_rate_variability">Heart Rate Variability</string>
    <string name="skin_temperature">Skin Temperature</string>
    <string name="skin_conductance">Skin Conductance</string>
    <string name="signal_viewer">Signal Viewer</string>
    <string name="past_data">Past Data</string>
    <string name="live_view">Live View</string>
    <string name="hr_info_title">What is Heart Rate variability and why is it important?</string>
    <string name="set_up_support">Set up support</string>
    <string name="x_sign">X</string>
    <string name="add_support_contact_text">Enter the name, number, and picture (optional) of a person you\'d reach out to in your time of need.</string>
    <string name="select_photo">Select photo</string>
    <string name="enter_name">Enter name</string>
    <string name="you_ve_completed_your_program">You\'ve Completed Your Program!!</string>
    <string name="enroll_in_new_program">Enroll in new program</string>
    <string name="take_a_break">Take a break</string>
    <string name="autonomic_practice">AUTONOMIC PRACTICE</string>
    <string name="loading">Loading&#8230;</string>
</resources>