<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/support"
            style="@style/title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/set_up_support"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    <TextView
        android:id="@+id/close_dialog_textView"
        style="@style/title_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="12dp"
        android:text="@string/x_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toEndOf="@id/support"
        app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/contact_icon_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/select_photo"
            android:scaleType="fitXY"
            android:scaleX="0.70"
            android:scaleY="0.70"
            android:src="@drawable/add_person_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/support" />

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="235dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_light"
        android:padding="8dp"
        android:text="@string/add_support_contact_text"
        android:textColor="@color/icon_title_color"
        android:textSize="12sp"
        android:visibility="@{viewModel.isEditMode ? View.INVISIBLE : View.VISIBLE}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_dialog_textView" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/rounded_rectangle"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:paddingEnd="32dp"
        android:text="@={viewModel.supportName}"
        android:textColor="@color/lighter_gray"
        android:textColorHint="@color/grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_icon_imageView"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/phone_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/rounded_rectangle"
        android:fontFamily="@font/montserrat_regular"
        android:hint="XXXXXXXXXX"
        android:inputType="phone"
        android:padding="12dp"
        android:paddingEnd="32dp"
        android:text="@={viewModel.supportName}"
        android:textColor="@color/lighter_gray"
        android:textColorHint="@color/grey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_editText"
        android:layout_marginTop="40dp"
        />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/red_short_button"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_editText"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:text="Delete"
        />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/purple_short_button"
        android:fontFamily="@font/montserrat_regular"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_editText" />

</androidx.constraintlayout.widget.ConstraintLayout>