<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseline_dialog"
    android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/you_ve_completed_your_program"
        android:textColor="@color/icon_title_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/completionDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp"
        android:fontFamily="@font/montserrat_regular"
        android:justificationMode="inter_word"
        android:textColor="@color/icon_title_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTextView" />

    <Button
        android:id="@+id/newProgram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/red_button"
        android:fontFamily="@font/montserrat_semi_bold"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/enroll_in_new_program"
        android:textAllCaps="true"
        android:textColor="@color/icon_title_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/completionDesc" />

    <Button
        android:id="@+id/takeBreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/signinbutton"
        android:backgroundTint="#444444"
        android:fontFamily="@font/montserrat_semi_bold"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/take_a_break"
        android:textAllCaps="true"
        android:textColor="@color/icon_title_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newProgram" />

</androidx.constraintlayout.widget.ConstraintLayout>
